# ansible-role-bash

./: .ansible-lint  .envrc  .gitignore  .pre-commit-config.yaml  .rtx.toml  Makefile  README.md  pyproject.toml
.github/workflows/: molecule.yml  pre-commit.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: config.yml  configure_user.yml  install.yml  main.yml  preflight.yml
templates/: .bash_logout.j2  .bashrc.j2  config.yml.j2  nebula.service.j2
vars/: main.yml
