[tool.poetry]
name = "cc.chroni.ansible-role-bash"
version = "0.1.0"
description = "Ansible role for installing bash."
authors = ["Thomas Steinert <hello@chroni.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
ansible = "^8"
ansible-core = "^2"
docker = "^6"
python = ">=3.10,<4"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^6", markers = "platform_system != 'Windows'" }
molecule = "^6"
molecule-plugins = { extras = ["docker"], version = "^23" }
pre-commit = "^2"
requests = "2.32.0" # see https://github.com/docker/docker-py/issues/3113 (urllibv3 incompatibility with requests > 2.28.0)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
